Modificacion de My Site

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2014. v<span app-version></span></p>
+                <p>Copyright &copy; SAYA IT 2014. v<span app-version></span></p>
             </div>
         </div>
         <!-- /.row -->
